# FrayedEnds

./: README.md  pyproject.toml
.github/workflows/: ci_ruff.yml  deploy.yml  quarto_deploy.yml
docs/: .gitignore  NWChem_BeH2.ipynb  _config.yml  _quarto.yml  index.qmd  requirements.txt  research.qmd  theme-dark.scss  theme-light.scss  tutorials.qmd
docs/tutorials/: _meta.yaml
docs/tutorials/ExcitedStates_H4/: H4_ExcitedStates.ipynb
docs/tutorials/NWChem_BeH2/: NWChem_BeH2.ipynb
docs/tutorials/PNO_FCI/: PNO_FCI.ipynb
examples/: ci.py  ortho_test.py  pno.py  qdot_pot.py  qdot_shortened.py  qdot_shortened2D.py  spa.py  spa_from_ao.py  spa_sto3g.py
examples/excited_states/: h2_mra_dmrg.py  h4_mra_dmrg.py  h4_mra_fci.py  h4_mra_pno_dmrg.py  h4_mra_pno_fci.py  h4_pno_dmrg.py
examples/excited_states/more_examples/: h4_dmrg.py  h4_fci.py  h4_mra_dmrg.py  h4_mra_fci.py  h4_mra_pno_dmrg.py  h4_mra_pno_fci.py  h4_pno_dmrg.py
examples/gradient/: BeH2_nofc.py  Geom_optimizer.py  LiH_fci.py  compare_to_gaussian.py  gradient.py  gradient_H2.py  moltest.py
src/frayedends/: __init__.py  eigensolver.py  integrals.py  madpno.py  madworld.py  methods.py  minbas.py  moleculargeometry.py  nwchem_converter.py  optimization.py  pyscf_interface.py  tequila_interface.py
tests/: test_basics.py  test_pyscf.py
